lints.workspace = true

[package]
name = "netgauze-bmp-pkt"
version = "0.11.0"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BMP Protocol representation and serde.
"""
keywords = ["bmp", "bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-iana = { workspace = true }
netgauze-bgp-pkt = { workspace = true }
netgauze-locate = { workspace = true, optional = true }
netgauze-parse-utils = { workspace = true, optional = true }
netgauze-serde-macros = { workspace = true, optional = true }
strum_macros = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ipnet = { workspace = true, features = ["serde"] }
nom = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }                        # Dev dep for bench
serde = { workspace = true, features = ["derive"] }
arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }
tokio-util = { workspace = true, default-features = false, features = ["codec"], optional = true }
bytes = { workspace = true, optional = true }
either = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["derive", "chrono04"], optional = true }

[features]
default = ["serde"]
serde = [
    "nom",
    "byteorder",
    "netgauze-locate",
    "netgauze-parse-utils",
    "netgauze-serde-macros",
]
codec = ["tokio-util", "bytes"]
bench = ["criterion"]
fuzz = ["arbitrary", "arbitrary_ext", "bitflags/arbitrary"]
json-schema = ["schemars", "netgauze-bgp-pkt/json-schema", "netgauze-iana/json-schema", "ipnet/schemars1"]

[dev-dependencies]
netgauze-pcap-reader = { workspace = true }
netgauze-parse-utils = { workspace = true, features = ["test-helpers"] }
chrono = { workspace = true, default-features = false, features = [
    "std",
    "serde",
    "clock",
] }
serde_json = { workspace = true }
rstest = { workspace = true }
pcap-parser = { workspace = true, features = ["data"] }
