lints.workspace = true

[package]
name = "netgauze-bmp-service"
version = "0.9.0"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BMP Protocol Server.
"""
keywords = ["bmp", "bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-bmp-pkt = { workspace = true, features = ["serde", "codec"] }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
pin-project = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tower = { workspace = true, features = ["full"] }
tower-service = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
