lints.workspace = true

[package]
name = "netgauze-bmp-service"
version = "0.9.2"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BMP Protocol Server.
"""
keywords = ["bmp", "bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-bmp-pkt = { workspace = true, features = ["serde", "codec"] }

tokio = { workspace = true, default-features = false, features = ["macros", "net"] }
tokio-util = { workspace = true, default-features = false }
futures-util = { workspace = true, features = ["sink"] }
futures-core = { workspace = true }
pin-project = { workspace = true }
tokio-stream = { workspace = true, default-features = false }
tower = { workspace = true, default-features = false, features = ["buffer", "util"] }
tower-service = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tokio-test = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
