[package]
name = "netgauze-cli-utility-pcap-to-json"
version = "0.6.2"
edition = "2024"
authors = ["Riccardo Negri <hello@riccardonegri.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
CLI Utility to convert NetFlow, IPFIX, BGP, BMP or UDP-Nofif data from a PCAP file to a JSON Lines file.
"""
keywords = ["ipfix", "netflow", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-flow-pkt = { workspace = true }
netgauze-pcap-reader = { workspace = true }
netgauze-bmp-pkt = {workspace = true, features = ["codec"] }
netgauze-bgp-pkt = {workspace = true, features = ["codec"]}
netgauze-udp-notif-pkt = { workspace = true, features = ["codec"] }
ciborium = { workspace = true }
serde = { workspace = true, features = ["derive"]} #  a generic serialization/deserialization framework
serde_json = {workspace = true}

pcap-parser = {workspace = true, features = ["data"]}
bytes = {workspace = true}
tokio-util = { workspace = true, features = ["codec"] }
tokio = {workspace = true, features = ["full", "rt-multi-thread"]}
clap = {workspace = true, features = ["default", "derive"]}
