[package]
name = "netgauze-collector"
version = "0.5.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Network metrics collector
"""
keywords = ["ipfix", "netflow", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-analytics = { workspace = true }
netgauze-flow-service = { workspace = true }
netgauze-flow-pkt = { workspace = true, features = ["codec"] }
netgauze-udp-notif-service = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
async-channel = { workspace = true }
serde_with = { workspace = true, features = ["default"] }
reqwest = { workspace = true, default-features = false, features = ["http2", "json", "stream", "rustls-tls-native-roots"] }
chrono = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { workspace = true, features = [
    "metrics",
    "trace",
    "logs",
    "rt-tokio",
] }
opentelemetry-otlp = { workspace = true, features = [
    "metrics",
    "trace",
    "logs",
    "tonic",
] }
apache-avro = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
schema_registry_converter = { workspace = true, default-features = false, features = ["avro", "futures", "rustls_tls"] }
either = { workspace = true }
pin-utils = { workspace = true }
serde_yaml = { workspace = true }

[target.'cfg(target_env = "msvc")'.dependencies]
rdkafka = { workspace = true, features = ["tokio", "cmake-build"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
rdkafka = { workspace = true, features = ["tokio", "cmake-build", "ssl", "ssl-vendored", "curl-static", "libz-static"] }

[dev-dependencies]
chrono = { workspace = true, default-features = false, features = [
    "std",
    "clock",
] }
tracing-subscriber = { workspace = true }

[profile.release]
codegen-units = 1
lto = false
