[package]
name = "netgauze-flow-pkt"
version = "0.5.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Netflow(v9)/IPFIX(v10) Protocol representation and serde
"""
keywords = ["ipfix", "netflow", "parser", "protocol"]
categories = ["network-programming", "parsing"]
# Specify the files to include in the crate
include = [
    "registry/**", # Specify entire folders if needed
]

[dependencies]
netgauze-locate = { workspace = true, optional = true }
netgauze-parse-utils = { workspace = true, optional = true }
netgauze-serde-macros = { workspace = true, optional = true }
netgauze-iana = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ipnet = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["std"] }
ordered-float = { workspace = true }
nom = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }                           # Dev dep for bench
tracing = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }
bytes = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "nom",
    "byteorder",
    "netgauze-locate",
    "netgauze-parse-utils",
    "netgauze-serde-macros",
    "chrono/serde",
    "ipnet/serde",
    "ordered-float/serde",
]
codec = ["tracing", "tokio-util", "bytes"]
bench = ["criterion"]
fuzz = ["arbitrary", "arbitrary_ext", "ordered-float/arbitrary"]
iana-upstream-build = ["serde"]

[dev-dependencies]
netgauze-pcap-reader = { workspace = true }
netgauze-parse-utils = { workspace = true, features = ["test-helpers"] }
serde_json = { workspace = true }
rstest = { workspace = true }
pcap-parser = { workspace = true, features = ["data"] }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
roxmltree = { workspace = true }
netgauze-ipfix-code-generator = { workspace = true }

[[bench]]
name = "serde_benchmark"
harness = false
required-features = ["bench"]
