[package]
name = "netgauze-flow-service"
version = "0.7.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
IPFIX/Netflow service
"""
keywords = ["ipfix", "netflow", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-flow-pkt = { workspace = true, features = ["codec"] }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true, features = ["full", "tracing"] }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
strum = { workspace = true }
strum_macros = { workspace = true }
async-channel = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics", "trace", "logs"] }
either = { workspace = true }

[dev-dependencies]
chrono = { workspace = true, default-features = false, features = [
    "std",
    "clock",
] }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
serde_json = { workspace = true }
