[package]
name = "netgauze-iana"
version = "0.6.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Collection of generic Internet Naming Authority (IANA) definitions that are not specific to a single protocol.
"""
keywords = ["protocol", "iana"]
categories = ["network-programming"]

[dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
arbitrary = { workspace = true, optional = true }
serde_json = { workspace = true }

[features]
default = []
fuzz = ["arbitrary"]
