[package]
name = "netgauze-ipfix-code-generator"
version = "0.0.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Generate Rust code bindings for IPFIX Information Elements
"""
keywords = ["ipfix", "netflow", "parser", "protocol", "code", "generator", "schema", "iana"]
categories = ["network-programming"]


[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
roxmltree = "0.18"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
