[package]
name = "netgauze-ipfix-code-generator"
version = "0.6.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Generate Rust code bindings for IPFIX Information Elements
"""
keywords = ["ipfix", "netflow", "parser", "code", "generator"]
categories = ["network-programming"]

[dependencies]
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
