[package]
name = "netgauze-netconf-proto"
version = "0.6.2"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
NETCONF low-level protocol implementation
"""
keywords = ["netconf", "yang", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
quick-xml = { workspace = true, features = ["serialize", "async-tokio"] }
iri-string = { workspace = true }
strum = { workspace = true, features = ["derive"] }
yang3 = { version = "0.17", features = ["bundled"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
log = "0.4.27"


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
russh = { version = "0.52", features = ["default"] }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-log = { version = "0.2" }
