[package]
name = "netgauze-netconf-proto"
version = "0.8.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
NETCONF low-level protocol implementation
"""
keywords = ["netconf", "yang", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
quick-xml = { workspace = true, features = ["serialize", "async-tokio"] }
strum_macros = { workspace = true }
strum = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
russh = { workspace = true }
secrecy = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
