lints.workspace = true

[package]
name = "netgauze-netconf-proto"
version = "0.9.0"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
NETCONF low-level protocol implementation
"""
keywords = ["netconf", "yang", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
quick-xml = { workspace = true, features = ["serialize", "async-tokio"] }
strum_macros = { workspace = true }
strum = { workspace = true, features = ["derive"] }
chrono = { workspace = true, default-features = false, features = ["serde"] }
bytes = { workspace = true }
tokio-util = { workspace = true, default-features = false, features = ["codec"] }
tokio = { workspace = true, default-features = false }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
russh = { workspace = true }
secrecy = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
petgraph = { workspace = true, default-features = false }
sha2 = { workspace = true }
schema-registry-client = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
