[package]
name = "netgauze-parse-utils"
version = "0.0.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Serialization/Deserialization utilities for NetGauze
"""
keywords = ["protocol"]
categories = ["parsing"]

[dependencies]
netgauze-locate = { path = "../locate" }
nom = { version = "7.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[features]
test-helpers = []
