[package]
name = "netgauze-parse-utils"
version = "0.7.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Serialization/Deserialization utilities for NetGauze
"""
keywords = ["protocol"]
categories = ["parsing"]

[dependencies]
netgauze-locate = { workspace = true  }
nom = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
test-helpers = []
