[package]
name = "netgauze-pcap-reader"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Simple PCAP reader
"""
keywords = ["pcap", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
pcap-parser = { workspace = true, features = ["data"] }
pdu = "1.4"

[dev-dependencies]
netgauze-bmp-pkt = { version = "0.3.0", path = "../bmp-pkt", features = ["codec"] }
serde_json = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
