lints.workspace = true

[package]
name = "netgauze-pcap-reader"
version = "0.8.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Simple PCAP reader
"""
keywords = ["pcap", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
pcap-parser = { workspace = true, features = ["data"] }
pdu = { workspace = true }
