[package]
name = "netgauze-serde-macros"
version = "0.7.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Helper macros to make ser/deser binary protocols easier
"""
keywords = ["protocol"]
categories = ["parsing"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }

[dev-dependencies]
netgauze-parse-utils = { workspace = true }
netgauze-locate = { workspace = true }
nom = { workspace = true }
trybuild = { workspace = true, features = ["diff"] }
